--- a/app/src/main/res/layout/article_view_item.xml
+++ b/app/src/main/res/layout/article_view_item.xml
@@ -15,26 +15,27 @@
             android:background="?selectableItemBackground">
         <ImageView
                 android:id="@+id/articleImage"
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                android:contentDescription="@{articleViewItem.article.title}"
-                app:imgSrcAsCircle="@{articleViewItem.article.urlToImage}"
-                app:layout_constraintTop_toTopOf="@id/articleTitle"
-                app:layout_constraintBottom_toBottomOf="@id/articleTitle"
-                app:layout_constraintStart_toStartOf="parent" />
-        <TextView
-                android:id="@+id/articleTitle"
+                android:background="@android:color/black"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/large_padding"
-                android:layout_marginStart="@dimen/standard_padding"
-                android:text="@{articleViewItem.article.title}"
-                android:textSize="18sp"
-                android:textColor="@android:color/black"
+                android:contentDescription="@{articleViewItem.title}"
+                app:imgSrcSizeToFit="@{articleViewItem.imgSrc}"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toEndOf="@id/articleImage"
-                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent" />
+        <TextView
+                android:id="@+id/articleTitle"
+                android:background="@color/text_backdrop"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/standard_padding"
+                android:text="@{articleViewItem.title}"
+                android:textSize="18sp"
+                android:textColor="@android:color/white"
+                app:layout_constraintStart_toStartOf="@id/articleImage"
+                app:layout_constraintEnd_toEndOf="@id/articleImage"
+                app:layout_constraintBottom_toBottomOf="@id/articleImage"
                 tools:text="Hurricane hits West Coast of the USA" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
