--- a/app/src/main/res/layout/article_view_item.xml
+++ b/app/src/main/res/layout/article_view_item.xml
@@ -3,7 +3,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools">
     <data>
-        <variable name="articleViewItem" type="com.billwetter.haveyouheard.ui.trending.ArticleViewItem"/>
+        <variable name="articleViewItem" type="com.billwetter.haveyouheard.ui.common.ArticleViewItem"/>
     </data>
     <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
