--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -7,12 +7,12 @@
             android:title="@string/title_trending"/>
 
     <item
-            android:id="@+id/navigation_dashboard"
+            android:id="@+id/navigation_bookmarks"
             android:icon="@drawable/ic_bookmarks_24px"
             android:title="@string/title_bookmarks"/>
 
     <item
-            android:id="@+id/navigation_notifications"
+            android:id="@+id/navigation_settings"
             android:icon="@drawable/ic_settings_black_24dp"
             android:title="@string/title_settings"/>
 
